# arky

./: .clippy.toml  .coderabbit.yaml  .commitlintrc.yaml  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  skills-lock.json
.claude/skills/: creating-spec
.codex/: CONTINUITY.md
.codex/plans/: 2026-03-16-live-provider-examples.md  2026-03-17-claude-compatible-providers.md
.github/workflows/: ci.yml
apps/api/: README.md
apps/desktop/: README.md
benches/: event_throughput.rs  replay_overhead.rs  spawn_latency.rs
crates/arky/: Cargo.toml
crates/arky-claude-code/: Cargo.toml
crates/arky-claude-code/src/: classifier.rs  config.rs  conversion.rs  cooldown.rs  dedup.rs  generate.rs  lib.rs  nested.rs  parser.rs  profile.rs  provider.rs  session.rs  tool_bridge.rs  tool_fsm.rs
crates/arky-claude-code/tests/: compatible_providers.rs  fixture_streams.rs  provider_contract.rs  real_claude_integration.rs
crates/arky-claude-code/tests/fixtures/: basic_text_stream.jsonl  claude_fixture.sh  contract_basic_stream.jsonl  nested_tool_stream.jsonl  rate_limit_stream.jsonl  tool_cycle_stream.jsonl  tool_progress_stream.jsonl
crates/arky-codex/: Cargo.toml
crates/arky-codex/src/: accumulator.rs  app_server.rs  approval.rs  config.rs  dedup.rs  dispatcher.rs  lib.rs  model_service.rs  notification.rs  pipeline.rs  provider.rs  registry.rs  rpc.rs  scheduler.rs  thread.rs  tool_payloads.rs
crates/arky-codex/tests/: provider_contract.rs  real_codex_integration.rs  thread_routing.rs
crates/arky-config/: Cargo.toml
crates/arky-config/src/: error.rs  layered.rs  lib.rs  loader.rs  merge.rs  validate.rs  validation.rs
crates/arky-config/tests/: end_to_end.rs  layering.rs  prerequisites.rs
crates/arky-control/: Cargo.toml
crates/arky-control/src/: lib.rs  runtime.rs  session.rs
crates/arky-core/: Cargo.toml
crates/arky-core/src/: agent.rs  builder.rs  error.rs  lib.rs  queue.rs  replay.rs  subscription.rs  turn.rs
crates/arky-core/tests/: agent_integration.rs
crates/arky-error/: Cargo.toml
crates/arky-error/src/: classifier.rs  lib.rs  union.rs
crates/arky-hooks/: Cargo.toml
crates/arky-hooks/src/: chain.rs  context.rs  error.rs  lib.rs  result.rs  shell.rs
crates/arky-hooks/tests/: hook_chain_integration.rs  shell_hook_integration.rs
crates/arky-integrations/: Cargo.toml
crates/arky-integrations/src/: lib.rs
crates/arky-mcp/: Cargo.toml
crates/arky-mcp/src/: auth.rs  bridge.rs  client.rs  error.rs  lib.rs  naming.rs  server.rs
crates/arky-mcp/tests/: http_bridge.rs  stdio_roundtrip.rs
crates/arky-protocol/: Cargo.toml
crates/arky-protocol/src/: event.rs  id.rs  lib.rs  message.rs  request.rs  session.rs  tool.rs  utils.rs
crates/arky-protocol/tests/: error_paths.rs  json_shape.rs
crates/arky-provider/: Cargo.toml
crates/arky-provider/src/: contract_tests.rs  descriptor.rs  discovery.rs  (+10 more)
crates/arky-runtime/: Cargo.toml
crates/arky-runtime/src/: lib.rs
crates/arky-server/: Cargo.toml
crates/arky-server/src/: client.rs  error.rs  lib.rs  middleware.rs  state.rs
crates/arky-server/src/routes/: chat.rs  events.rs  health.rs  mod.rs  models.rs  replay.rs  sessions.rs  sse.rs
crates/arky-server/tests/: http_server.rs
crates/arky-session/: Cargo.toml
crates/arky-session/src/: error.rs  key.rs  lib.rs  memory.rs  snapshot.rs  sqlite.rs  store.rs  support.rs
crates/arky-session/tests/: sqlite_integration.rs
crates/arky-storage/: Cargo.toml
crates/arky-storage/src/: lib.rs
crates/arky-tools/: Cargo.toml
crates/arky-tools-macros/: Cargo.toml
crates/arky-tools-macros/src/: codegen.rs  lib.rs  parse.rs  schema.rs
crates/arky-tools-macros/tests/: compile.rs  tool_macro_integration.rs
crates/arky-tools-macros/tests/pass/: basic.rs  multi_arg.rs
crates/arky-tools-macros/tests/ui/: borrowed_argument.rs  borrowed_argument.stderr  invalid_attr_args.rs  invalid_attr_args.stderr  missing_return.rs  missing_return.stderr  non_async.rs  non_async.stderr
crates/arky-tools/src/: codec.rs  descriptor.rs  error.rs  lib.rs  registry.rs  truncation.rs
crates/arky-tools/tests/: registry_integration.rs
crates/arky-types/: Cargo.toml
crates/arky-types/src/: lib.rs
crates/arky-usage/: Cargo.toml
crates/arky-usage/src/: aggregator.rs  cost.rs  extractor.rs  lib.rs
crates/arky/src/: error.rs  lib.rs  prelude.rs
crates/arky/tests/: dependency_graph.rs  features.rs  prelude.rs
docs/: architecture.md  getting-started.md
examples/: 01_claude_basic.rs  01_minimal.rs  02_claude_tools.rs  02_custom_provider.rs  03_claude_resume.rs  03_system_prompt.rs  04_codex_basic.rs  04_custom_tools.rs  05_codex_tools.rs  05_tool_registry.rs  06_codex_resume.rs  06_hooks.rs  07_codex_mcp.rs  07_event_streaming.rs  08_codex_control_flow.rs  08_mcp_integration.rs  09_live_matrix.rs  09_sessions.rs  10_claude_mcp.rs  10_steering_followup.rs  11_claude_runtime_config.rs  11_server_exposure.rs  12_codex_metadata_compaction.rs  12_full_control.rs  README.md  common.rs
scripts/: check-deps.sh  run-live-examples.sh
scripts/fixtures/: deps-clean.json  deps-cycle.json  deps-leaf-violation.json
scripts/markdown/: check.go  check_test.go
tasks/docs/: _prompt_template.md  _review-template.md  _task-template.md  _tasks-template.md
tasks/prd-architecture/: spec.md
tasks/prd-gaps/: _task_1.md  _task_2.md  _task_3.md  _tasks.md  analysis_claude_code.md  analysis_codex.md  analysis_core_runtime.md  analysis_server_session_usage.md  techspec.md
tasks/prd-rust-providers/: _task_1.md  _task_10.md  _task_11.md  _task_12.md  _task_13.md  _task_14.md  _task_15.md  _task_16.md  _task_2.md  _task_3.md  _task_4.md  _task_5.md  _task_6.md  _task_7.md  _task_8.md  _task_9.md  _tasks.md  analysis_claude_code.md  analysis_codex.md  analysis_codex_rs.md  analysis_core.md  analysis_opencode.md  analysis_pi_agent.md  analysis_runtime.md  analysis_rust_ecosystem.md  porting-reference.md  techspec.md
tasks/prd-subagents/: analysis_claude_code.md  analysis_codex.md  analysis_codex_cli.md  analysis_core_runtime.md
(+33 files in other folders)
