[workspace]
members = [
    "crates/arky",
    "crates/arky-error",
    "crates/arky-config",
    "crates/arky-core",
    "crates/arky-claude-code",
    "crates/arky-codex",
    "crates/arky-hooks",
    "crates/arky-mcp",
    "crates/arky-protocol",
    "crates/arky-provider",
    "crates/arky-server",
    "crates/arky-session",
    "crates/arky-tools",
    "crates/arky-tools-macros",
    "crates/arky-usage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/compozy/arky"
rust-version = "1.94.0"

[workspace.dependencies]
# Internal crates
arky = { path = "crates/arky" }
arky-error = { path = "crates/arky-error" }
arky-config = { path = "crates/arky-config" }
arky-core = { path = "crates/arky-core" }
arky-claude-code = { path = "crates/arky-claude-code" }
arky-codex = { path = "crates/arky-codex" }
arky-hooks = { path = "crates/arky-hooks" }
arky-mcp = { path = "crates/arky-mcp" }
arky-protocol = { path = "crates/arky-protocol" }
arky-provider = { path = "crates/arky-provider" }
arky-server = { path = "crates/arky-server" }
arky-session = { path = "crates/arky-session" }
arky-tools = { path = "crates/arky-tools" }
arky-tools-macros = { path = "crates/arky-tools-macros" }
arky-usage = { path = "crates/arky-usage" }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "time",
    "io-util",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
] }

# Schema generation
schemars = "0.8"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
axum = { version = "0.8", default-features = false }

# MCP
rmcp = "0.16"

# Data structures
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

# Database (feature-gated)
tokio-rusqlite = "0.7"

# Proc macro support
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Testing
pretty_assertions = "1"
tempfile = "3"
assert_matches = "1.5"

# Misc
chrono = "0.4"
bytes = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow these pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
