[package]
name = "arky-config"
description = "Configuration loading and validation for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = "0.9.42"
thiserror = { workspace = true }
toml = "1.0.6"
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
