[package]
name = "arky-config"
description = "Configuration loading and validation for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-claude-code = { workspace = true }
arky-codex = { workspace = true }
arky-error = { workspace = true }
arky-protocol = { workspace = true }
arky-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
