[package]
name = "arky-hooks"
description = "Hook system with lifecycle events for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-error = { workspace = true }
arky-protocol = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
futures.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
