[package]
name = "arky-mcp"
description = "MCP client, server, and bidirectional tool bridge for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-error = { workspace = true }
arky-protocol = { workspace = true }
arky-tools = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
base64 = "0.22.1"
futures = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "0.16", features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "auth"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
