[package]
name = "arky-mcp"
description = "MCP client, server, and bidirectional tool bridge for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-error = { workspace = true }
arky-protocol = { workspace = true }
arky-tools = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio"] }
base64 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["client", "server", "transport-child-process", "transport-io", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "auth"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
