[package]
name = "arky-runtime"
description = "Execution runtime for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-core = { workspace = true }

[lints]
workspace = true
