[package]
name = "arky-server"
description = "HTTP server for exposing the Arky agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
server = ["dep:axum", "dep:tower-http"]

[dependencies]
arky-control = { workspace = true }
arky-error = { workspace = true }
arky-runtime = { workspace = true }
arky-storage = { workspace = true }
arky-types = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true, features = ["http1", "json", "query", "tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
subtle = "2.6.1"

[dev-dependencies]
arky-provider = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["stream", "rustls-tls", "json"] }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
