[package]
name = "arky-types"
description = "Execution-layer shared contracts for the Arky AI agent SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-protocol = { workspace = true }

[lints]
workspace = true
