[package]
name = "arky-usage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arky-protocol = { version = "0.1.0", path = "../arky-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
