[package]
name = "arky"
description = "Arky AI agent SDK - facade crate re-exporting all components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["claude-code", "codex"]
claude-code = ["dep:arky-claude-code"]
codex = ["dep:arky-codex"]
sqlite = ["arky-session/sqlite", "arky-storage/sqlite"]
server = ["dep:arky-server", "arky-server/server"]
full = ["claude-code", "codex", "sqlite", "server"]

[dependencies]
arky-control = { workspace = true }
arky-error = { workspace = true }
arky-config = { workspace = true }
arky-core = { workspace = true }
arky-hooks = { workspace = true }
arky-integrations = { workspace = true }
arky-mcp = { workspace = true }
arky-protocol = { workspace = true }
arky-provider = { workspace = true }
arky-runtime = { workspace = true }
arky-session = { workspace = true }
arky-storage = { workspace = true }
arky-tools = { workspace = true }
arky-tools-macros = { workspace = true }
arky-types = { workspace = true }
arky-usage = { workspace = true }

# Optional provider crates
arky-claude-code = { workspace = true, optional = true }
arky-codex = { workspace = true, optional = true }
arky-server = { workspace = true, optional = true }
thiserror.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
futures.workspace = true
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls", "stream"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "test-util", "time"] }
tokio-util.workspace = true

[[example]]
name = "01_claude_basic"
path = "../../examples/01_claude_basic.rs"

[[example]]
name = "02_claude_tools"
path = "../../examples/02_claude_tools.rs"

[[example]]
name = "03_claude_resume"
path = "../../examples/03_claude_resume.rs"

[[example]]
name = "04_codex_basic"
path = "../../examples/04_codex_basic.rs"

[[example]]
name = "05_codex_tools"
path = "../../examples/05_codex_tools.rs"

[[example]]
name = "06_codex_resume"
path = "../../examples/06_codex_resume.rs"

[[example]]
name = "07_codex_mcp"
path = "../../examples/07_codex_mcp.rs"

[[example]]
name = "08_codex_control_flow"
path = "../../examples/08_codex_control_flow.rs"

[[example]]
name = "09_live_matrix"
path = "../../examples/09_live_matrix.rs"

[[example]]
name = "10_claude_mcp"
path = "../../examples/10_claude_mcp.rs"

[[example]]
name = "11_claude_runtime_config"
path = "../../examples/11_claude_runtime_config.rs"

[[example]]
name = "12_codex_metadata_compaction"
path = "../../examples/12_codex_metadata_compaction.rs"

[[bench]]
name = "event_throughput"
path = "../../benches/event_throughput.rs"
harness = false

[[bench]]
name = "spawn_latency"
path = "../../benches/spawn_latency.rs"
harness = false

[[bench]]
name = "replay_overhead"
path = "../../benches/replay_overhead.rs"
harness = false

[lints]
workspace = true
